tests/snapshots/test_runner__tests__compiler__typecheck__import_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// importing private symbol
import "./import_1.kk" spam

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_4.kk:2:24
  │
2 │ import "./import_1.kk" spam
  │                        ^^^^ Cannot import private symbol.
  │
  = Consider exporting this symbol if you want to import it in this file.
    For example:

        export let x = 2
